syntax = "proto3";

package testcrf;

import "goplain/goplain.proto";

option go_package = "github.com/yaroher/protoc-gen-go-plain/test/crf";

option (goplain.file).virtual_types = {
    name: "VirtualType",
    fields: [
    {
        kind: TYPE_MESSAGE,
        cardinality: CARDINALITY_OPTIONAL,
        number: 1,
        name: "file",
        type_url: "testcrf.File",
    }
    ],
};

message File {
    string path = 1;
}

message FileRename {
    option (goplain.message).generate = true;
    File file = 1 [(goplain.field).embed = true];
}

message FileCreate {
    option (goplain.message).generate = true;
    File file = 1 [(goplain.field).embed = true];
}

message Process {
    option (goplain.message).generate = true;
    File file = 1;
}

message EventData {
    option (goplain.message).generate = true;
    oneof platform_event {
        option (goplain.oneof).embed = true;
        FileRename file_rename = 1 [(goplain.field).embed = true];
        FileCreate file_create = 2 [(goplain.field).embed = true];
        string other_event = 3 [(goplain.field).embed = true];
    }
    oneof non_platform_event {
        option (goplain.oneof).embed_with_prefix = true;
        string custom_event = 4;
        File file = 5 [(goplain.field).embed = true];
    }
    oneof no_removed_oneof {
        string no_remove = 6;
        File not_removed_file = 7 [(goplain.field).embed = true];
    }
}

message Event {
    option (goplain.message).generate = true;
    option (goplain.message).virtual_fields = {
        name: "event_virtual_type",
        kind: TYPE_STRING
    };
    int32 event_id = 1;
    string some_event_string_payload = 2 [(goplain.field).override_type = {name: "UUID", import_path: "github.com/google/uuid"}];
    Process process = 3;
    EventData data = 4 [(goplain.field).embed = true];
    string parent_event_id = 5;
}
